(include_subdirs unqualified)

(library
 (name datasets)
 (public_name neural_nets_lib.datasets)
 (libraries unix zip curl csv bigarray dune-site base stdio))

(install
 (package neural_nets_lib)
 (section (site (neural_nets_lib data)))
 (files (names.txt as names.txt)))

(generate_sites_module
 (module dataset_sites)
 (sites neural_nets_lib))
