(library
 (name gccjit)
 (libraries ctypes.foreign)
 (flags :standard -cclib -lgccjit -w -9-27)
 (ctypes
  (external_library_name libgccjit)
  (build_flags_resolver
   (vendored
    (c_library_flags -lgccjit)))
  (headers
   (include "libgccjit.h"))
  (type_description
   (instance Types)
   (functor Gccjit_bindings_types))
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Gccjit_bindings))
  (generated_types Types_generated)
  (generated_entry_point C)))
