(library
 (name ocannl)
 (public_name neural_nets_lib)
 (libraries
  base
  printbox
  printbox-text
  npy
  angstrom
  stdio
  sexplib
  num
  str
  ; mem_usage
  ppx_minidebug.runtime
  arrayjit)
 (preprocess
  (pps
   ppx_compare
   ppx_fields_conv
   ppx_hash
   ppx_here
   ppx_sexp_conv
   ppx_string
   ppx_variants_conv
   ppx_ocannl
   ppx_minidebug))
 (modules PrintBox_utils row shape tensor operation train nn_blocks)
 (modes byte native)
 (c_library_flags -pthread))

(library
 (name ppx_ocannl)
 (public_name neural_nets_lib.ppx_ocannl)
 (kind ppx_rewriter)
 (modules ppx_shared ppx_cd ppx_op ppx_ocannl)
 (libraries base ppxlib str ppx_arrayjit)
 (preprocess
  (pps ppxlib.metaquot)))
