(library
 (name ocannl)
 (public_name neural_nets_lib)
 (libraries
  base
  stdio
  arrayjit.utils
  ppx_here.runtime-lib
  ppx_minidebug.runtime
  arrayjit.ir
  arrayjit.context
  ocannl_tensor)
 (preprocessor_deps
  (env_var OCANNL_LOG_LEVEL))
 (preprocess
  (pps
   ppx_compare
   ppx_hash
   ppx_here
   ppx_sexp_conv
   ppx_string
   ppx_ocannl
   ppx_minidebug))
 (modules train nn_blocks ocannl)
 (modes best)
 (c_library_flags -lpthread))
