; A non-crash run counts as a success for moons_demo_parallel_run.

(test
 (name moons_demo_parallel_run)
 (package neural_nets_lib)
 (modules moons_demo_parallel_run)
 (deps ocannl_config)
 (libraries ocannl)
 (preprocess
  (pps ppx_ocannl)))

(executable
 (name micrograd_demo_logging)
 (modules micrograd_demo_logging)
 (libraries ocannl)
 (preprocess
  (pps ppx_ocannl)))

(rule
 (target
  (dir log_files))
 (action
  (progn
   (run
    %{dep:micrograd_demo_logging.exe}
    "--ocannl_debug_backend=text"
    "--ocannl_log_file_stem=micrograd_demo_logging"
    "--ocannl_log_main_domain_to_stdout=false"
    "--ocannl_debug_log_to_routine_files=overwrite")
   (run
    %{dep:../tools/minised.exe}
    "0x[0-9a-f]+"
    "0xNNNN"
    "log_files/debug-multicore_cc-0-0-g_gradient_update.log"
    "log_files/micrograd_demo_logging-g_gradient_update.log")
    (run
    %{dep:../tools/minised.exe}
    "\\([a-z0-9_]+\\)\\[0\\]{=[-.e0-9]+} = "
    "\\1[0]{=MAYBE UNINITIALIZED} = "
    "log_files/micrograd_demo_logging-g_gradient_update.log"
    "log_files/micrograd_demo_logging-g_gradient_update.log"))))

(rule
 (alias runtest)
 (deps log_files/debug-multicore_cc-0-0-g_gradient_update.log)
 (action
  (diff
   micrograd_demo_logging-g_gradient_update.expected.log
   log_files/micrograd_demo_logging-g_gradient_update.log)))

(library
 (name tutorials)
 (package neural_nets_lib)
 (inline_tests
  (deps ocannl_config))
 (libraries base dynlink ocannl)
 (modules
  einsum_trivia
  hello_world_op
  micrograd_demo
  zero2hero_1of7
  primitive_ops
  moons_demo_parallel)
 (preprocess
  (pps ppx_here ppx_expect ppx_inline_test ppx_ocannl))
 (modes best))
