; A non-crash run counts as a success for moons_demo_parallel_run.

(test
 (name moons_demo_parallel_run)
 (package neural_nets_lib)
 (modules moons_demo_parallel_run)
 (deps ocannl_config)
 (libraries ocannl)
 (preprocess
  (pps ppx_ocannl)))

(executable
 (name micrograd_demo_logging)
 (modules micrograd_demo_logging)
 (libraries ocannl)
 (preprocess
  (pps ppx_ocannl)))

(rule
 (alias runtest)
 (target
  (dir log_files))
 (action
  (run
   %{dep:micrograd_demo_logging.exe}
   "--ocannl_debug_backend=text"
   "--ocannl_log_file_stem=micrograd_demo_logging"
   "--ocannl_log_main_domain_to_stdout=false"
   "--ocannl_debug_log_to_stream_files=true")))

(rule
 (alias runtest)
 (target micrograd_demo_logging-stream-0-0.log)
 (deps
  (:kernel_log
   (glob_files log_files/*-0-0.log)))
 (action
  (progn
   (run
    %{dep:../tools/minised.exe}
    "0x[0-9a-f]+"
    "0xNNNN"
    %{kernel_log}
    "micrograd_demo_logging-stream-0-0.log")
   (run
    %{dep:../tools/minised.exe}
    "\\([a-z0-9_]+\\)\\[0\\]{=[-.e0-9]+} = "
    "\\1[0]{=MAYBE UNINITIALIZED} = "
    "micrograd_demo_logging-stream-0-0.log"
    "micrograd_demo_logging-stream-0-0.log"))))

(rule
 (alias runtest)
 (action
  (diff
   micrograd_demo_logging-stream-0-0.expected.log
   micrograd_demo_logging-stream-0-0.log)))

(library
 (name tutorials)
 (package neural_nets_lib)
 (inline_tests
  (deps ocannl_config))
 (libraries base dynlink ocannl)
 (modules
  einsum_trivia
  hello_world_op
  micrograd_demo
  zero2hero_1of7
  primitive_ops
  moons_demo_parallel)
 (preprocess
  (pps ppx_here ppx_expect ppx_inline_test ppx_ocannl))
 (modes best))
