
(executable
 (name pp)
 (modules pp)
 (libraries ppx_ocannl ppx_metaocannl ppxlib)
 (modes exe))

(rule
 (targets test_ppx_meta_actual.ml)
 (deps (:pp pp.exe) (:input test_ppx_meta.ml))
 (action (run ./%{pp} --impl %{input} -o %{targets})))

(rule
 (alias runtest)
 (action (diff test_ppx_meta_expected.ml test_ppx_meta_actual.ml)))

(test
  (name test_ppx_meta)
  (modules test_ppx_meta)
  (preprocess (pps ppx_metaocannl)))