(executable
 (name pp)
 (modules pp)
 (libraries ppx_ocannl ppxlib)
 (modes exe))

(rule
 (targets test_ppx_op_actual.ml)
 (deps
  (:pp pp.exe)
  (:input test_ppx_op.ml))
 (action
  (run ./%{pp} --impl %{input} -o %{targets})))

(rule
 (alias runtest)
 (action
  (diff test_ppx_op_expected.ml test_ppx_op_actual.ml)))

(test
 (name test_ppx_op)
 (modules test_ppx_op)
 (libraries ocannl)
 (preprocess
  (pps ppx_ocannl)))

(test
 (name test_ppx_op_expected)
 (modules test_ppx_op_expected)
 (libraries ocannl))
