(library
 (name arrayjit)
 (public_name arrayjit)
 (libraries
  base
  printbox
  printbox-text
  npy
  stdio
  sexplib
  str
  ctypes
  ctypes.foreign
  saturn_lockfree
  landmarks
  (select
   gcc_backend.ml
   from
   (gccjit -> gcc_backend.gccjit.ml)
   (-> gcc_backend.missing.ml))
  (select
   cuda_backend.ml
   from
   (cudajit -> cuda_backend.cudajit.ml)
   (-> cuda_backend.missing.ml))
  ppx_minidebug.runtime)
 (preprocess
  (pps
   ppx_compare
   ppx_hash
   ppx_here
   ppx_sexp_conv
   ppx_string
   ppx_variants_conv
   landmarks-ppx
   ppx_minidebug))
 (modules
  utils
  rand
  ops
  ndarray
  indexing
  tnode
  low_level
  assignments
  task
  backend_intf
  backend_impl
  c_syntax
  cc_backend
  gcc_backend
  cuda_backend
  lowered_backend_missing
  no_device_backend_missing
  schedulers
  backends)
 (modes byte native))

(library
 (name ppx_arrayjit)
 (public_name arrayjit.ppx_arrayjit)
 (modules ppx_helper)
 (libraries base ppxlib str)
 (preprocess
  (pps ppxlib.metaquot)))
