(library
 (name utils)
 (public_name arrayjit.utils)
 (preprocessor_deps
  (env_var OCANNL_LOG_LEVEL))
 (modules utils datatypes)
 (libraries base stdio pprint ppx_minidebug.runtime ppx_minidebug.db)
 (preprocess
  (pps
   ppx_compare
   ppx_hash
   ppx_here
   ppx_sexp_conv
   ppx_string
   ppx_variants_conv
   ppx_minidebug)))

(library
 (name ir)
 (public_name arrayjit.ir)
 (preprocessor_deps
  (env_var OCANNL_LOG_LEVEL))
 (libraries
  base
  printbox
  printbox-text
  pprint
  stdio
  sexplib
  str
  ctypes
  ctypes.foreign
  saturn_lockfree
  utils
  ppx_minidebug.runtime
  ppx_minidebug.db)
 (foreign_stubs
  (language c)
  (names builtins))
 (preprocess
  (pps
   ppx_compare
   ppx_hash
   ppx_here
   ppx_sexp_conv
   ppx_string
   ppx_variants_conv
   ppx_minidebug))
 (modules
  ops
  ndarray
  indexing
  tnode
  low_level
  assignments
  task
  backend_intf
  backend_impl
  c_syntax)
 (modes best))

(library
 (name cuda_backend)
 (public_name arrayjit.cuda_backend)
 (optional)
 (modules cuda_backend builtins_cuda)
 (libraries base cudajit.cuda cudajit.nvrtc utils ir)
 (preprocess
  (pps
   ppx_compare
   ppx_hash
   ppx_here
   ppx_sexp_conv
   ppx_string
   ppx_variants_conv
   ppx_minidebug)))

(library
 (name metal_backend)
 (public_name arrayjit.metal_backend)
 (optional)
 (modules metal_backend builtins_metal)
 (libraries base metal utils ir)
 (preprocess
  (pps
   ppx_compare
   ppx_hash
   ppx_here
   ppx_sexp_conv
   ppx_string
   ppx_variants_conv
   ppx_minidebug)))

(library
 (name context)
 (public_name arrayjit.context)
 (preprocessor_deps
  (env_var OCANNL_LOG_LEVEL))
 (libraries
  base
  printbox
  printbox-text
  stdio
  sexplib
  str
  ctypes
  ctypes.foreign
  saturn_lockfree
  utils
  ir
  (select
   cuda_backend_impl.ml
   from
   (cuda_backend -> cuda_backend_impl.cudajit.ml)
   (-> cuda_backend_impl.missing.ml))
  (select
   metal_backend_impl.ml
   from
   (metal_backend -> metal_backend_impl.metal.ml)
   (-> metal_backend_impl.missing.ml))
  ppx_minidebug.runtime
  ppx_minidebug.db)
 (preprocess
  (pps
   ppx_compare
   ppx_hash
   ppx_here
   ppx_sexp_conv
   ppx_string
   ppx_variants_conv
   ppx_minidebug))
 (modules
  cc_backend
  builtins_cc
  cuda_backend_impl
  metal_backend_impl
  lowered_backend_missing
  no_device_backend_missing
  schedulers
  backends
  context)
 (modes best))
