(test
 (name test_numerical_types)
 (package arrayjit)
 (modules test_numerical_types)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir)
 (preprocess
  (pps ppx_here)))

(test
 (name test_ndarray_binary_io)
 (package arrayjit)
 (modules test_ndarray_binary_io)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir)
 (preprocess
  (pps ppx_here)))

(test
 (name tree_map_test)
 (package arrayjit)
 (modules tree_map_test)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.utils)
 (preprocess
  (pps ppx_sexp_conv ppx_here)))

(test
 (name test_cross_cse)
 (package arrayjit)
 (modules test_cross_cse)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir))

(test
 (name test_zero_out_codegen)
 (package arrayjit)
 (modules test_zero_out_codegen)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir))

(test
 (name test_slab_free_on_grow)
 (package arrayjit)
 (modules test_slab_free_on_grow)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir))

; Gated on actual availability of the optional Metal backend, not on the OS:
; `arrayjit.metal_backend` is an `(optional)` library and is hidden whenever
; its `metal` dependency is unavailable in the switch. An `(= %{system} macosx)`
; gate is true on every macOS switch, including ones without the `metal` opam
; package installed, where it would force a build of a hidden library and fail
; the whole `@all` alias. `%{lib-available:...}` is true only when the backend
; is genuinely linkable, so the test is built where it can run and skipped
; everywhere else.
(test
 (name test_metal_storage_mode)
 (package arrayjit)
 (enabled_if %{lib-available:arrayjit.metal_backend})
 (modules test_metal_storage_mode)
 (deps ocannl_config)
 (libraries base stdio metal arrayjit.ir arrayjit.metal_backend))

; Exercises the real Metal allocator paths and private-buffer host transfers;
; requires the optional Metal backend to be available (and a working Metal
; device at run time). Gated on library availability — see the note above.
(test
 (name test_metal_alloc)
 (package arrayjit)
 (enabled_if %{lib-available:arrayjit.metal_backend})
 (modules test_metal_alloc)
 (deps ocannl_config)
 (libraries base stdio metal arrayjit.ir arrayjit.metal_backend))
