(test
 (name test_numerical_types)
 (package arrayjit)
 (modules test_numerical_types)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir)
 (preprocess
  (pps ppx_here)))

(test
 (name test_ndarray_binary_io)
 (package arrayjit)
 (modules test_ndarray_binary_io)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir)
 (preprocess
  (pps ppx_here)))

(test
 (name tree_map_test)
 (package arrayjit)
 (modules tree_map_test)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.utils)
 (preprocess
  (pps ppx_sexp_conv ppx_here)))

(test
 (name test_cross_cse)
 (package arrayjit)
 (modules test_cross_cse)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir))

(test
 (name test_zero_out_codegen)
 (package arrayjit)
 (modules test_zero_out_codegen)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir))

(test
 (name test_slab_free_on_grow)
 (package arrayjit)
 (modules test_slab_free_on_grow)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir))

; Gated on availability of the external `metal` opam package, not on the OS.
; `metal` is the platform constraint (Apple-only) and the actual dependency
; that goes missing off macOS; `arrayjit.metal_backend` is the `(optional)`
; local wrapper that links it. We must gate on the *external* lib, not the
; local wrapper: a locally-defined optional library reads as available in
; `enabled_if` (it is part of the workspace) even when its transitive `metal`
; dep is absent, so the unavailable lib is only discovered at link — too late,
; the stanza is already in `@all` and the build fails. An `(= %{system} macosx)`
; gate has the same failure mode on a macOS switch without `metal` installed.
; `%{lib-available:metal}` is true only when `metal` is genuinely installed, so
; the test is built where it can run and cleanly skipped everywhere else.
(test
 (name test_metal_storage_mode)
 (package arrayjit)
 (enabled_if %{lib-available:metal})
 (modules test_metal_storage_mode)
 (deps ocannl_config)
 (libraries base stdio metal arrayjit.ir arrayjit.metal_backend))

; Exercises the real Metal allocator paths and private-buffer host transfers;
; requires the `metal` package to be available (and a working Metal device at
; run time). Gated on library availability — see the note above.
(test
 (name test_metal_alloc)
 (package arrayjit)
 (enabled_if %{lib-available:metal})
 (modules test_metal_alloc)
 (deps ocannl_config)
 (libraries base stdio metal arrayjit.ir arrayjit.metal_backend))
