(test
 (name test_numerical_types)
 (package arrayjit)
 (modules test_numerical_types)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir)
 (preprocess
  (pps ppx_here)))

(test
 (name test_ndarray_binary_io)
 (package arrayjit)
 (modules test_ndarray_binary_io)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir)
 (preprocess
  (pps ppx_here)))

(test
 (name tree_map_test)
 (package arrayjit)
 (modules tree_map_test)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.utils)
 (preprocess
  (pps ppx_sexp_conv ppx_here)))

(test
 (name test_cross_cse)
 (package arrayjit)
 (modules test_cross_cse)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir))

(test
 (name test_one_hot_gather_rewrite)
 (package arrayjit)
 (modules test_one_hot_gather_rewrite)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir))

(test
 (name test_zero_out_codegen)
 (package arrayjit)
 (modules test_zero_out_codegen)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir))

(test
 (name test_local_scope_init)
 (package arrayjit)
 (modules test_local_scope_init)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir))

(test
 (name test_slab_free_on_grow)
 (package arrayjit)
 (modules test_slab_free_on_grow)
 (deps
  ocannl_config
  (env_var OCANNL_BACKEND))
 (libraries base stdio arrayjit.ir))

; Metal backend tests. The Metal backend (the `metal` opam package + the
; `(optional)` `arrayjit.metal_backend` library) is Apple-only — `arrayjit.opam`
; depends on `metal {= :os macos}`, so off macOS those libraries are absent.
;
; We cannot just gate the stanza: an `enabled_if` on a `(test)` does NOT stop
; dune from resolving its `(libraries)`, so a disabled test still requires the
; hidden optional lib and the build fails with "arrayjit.metal_backend ... is
; hidden". Instead we keep the test ALWAYS building and pick the implementation
; with dune `select` (the same mechanism `arrayjit/lib/dune` uses for
; `metal_backend_impl`): where `metal` + `arrayjit.metal_backend` are available
; the real test runs; elsewhere a stub (`*.missing.ml`, linking neither) is
; selected and reproduces the recorded golden so the test passes trivially.
(test
 (name test_metal_storage_mode)
 (package arrayjit)
 (modules test_metal_storage_mode)
 (deps ocannl_config test_metal_storage_mode.expected)
 (libraries
  base
  stdio
  (select
   test_metal_storage_mode.ml
   from
   (metal arrayjit.metal_backend arrayjit.ir ->
    test_metal_storage_mode.real.ml)
   (-> test_metal_storage_mode.missing.ml))))

(test
 (name test_metal_alloc)
 (package arrayjit)
 (modules test_metal_alloc)
 (deps ocannl_config test_metal_alloc.expected)
 (libraries
  base
  stdio
  (select
   test_metal_alloc.ml
   from
   (metal arrayjit.metal_backend arrayjit.ir -> test_metal_alloc.real.ml)
   (-> test_metal_alloc.missing.ml))))

(test
 (name test_pool_segments)
 (package arrayjit)
 (modules test_pool_segments)
 (deps ocannl_config test_pool_segments.expected)
 (libraries base stdio arrayjit.context))
