(copy_files
 (files ../config/ocannl_config))

(test
 (name moons_demo_variant)
 (deps ocannl_config)
 (modules moons_demo_variant)
 (libraries ocannl datasets)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name einsum_trivia_exec)
 (deps ocannl_config)
 (modules einsum_trivia_exec)
 (libraries ocannl)
 (preprocess
  (pps ppx_ocannl ppx_here)))

(test
 (name test_conv_syntax)
 (deps ocannl_config)
 (modules test_conv_syntax)
 (libraries ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_print_style)
 (deps ocannl_config)
 (modules test_print_style)
 (libraries ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_surjectivity)
 (deps ocannl_config)
 (modules test_surjectivity)
 (libraries ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(test
 (name test_accumulation_semantics)
 (deps ocannl_config)
 (modules test_accumulation_semantics)
 (libraries ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(library
 (name einsum_tutorials)
 (package neural_nets_lib)
 (inline_tests
  (deps ocannl_config))
 (libraries base dynlink ocannl)
 (modules einsum_trivia surjectivity)
 (preprocess
  (pps ppx_here ppx_expect ppx_inline_test ppx_ocannl))
 (modes best))

(test
 (name inline_permuted_view)
 (modules inline_permuted_view)
 (libraries base ocannl)
 (preprocess
  (pps ppx_here ppx_ocannl)))

(rule
 (alias runtest)
 (target inline_permuted_view-c_fwd.ll.actual)
 (action
  (no-infer
   (progn
    (run
     %{dep:inline_permuted_view.exe}
     "--ocannl_output_debug_files_in_build_directory=true")
    (copy build_files/c_fwd.ll %{target})))))

(rule
 (alias runtest)
 (action
  (diff
   "inline_permuted_view-c_fwd.ll.expected"
   "inline_permuted_view-c_fwd.ll.actual")))
